--- a/package.json
+++ b/package.json
@@ -1,14 +1,60 @@
 {
-  "name": "google-image-scraper",
+  "name": "g-images-scraper",
   "version": "1.0.0",
-  "description": "Scraper gambar Google Images dengan Node.js",
-  "main": "index.js",
+  "description": "Simple scraper for Google images using Puppeteer",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "jest",
+    "check-codestyle": "prettier-check '**/*.{js,jsx,json,css,ts,tsx,md,yaml}'",
+    "fix-all-code-style": "prettier --write '**/*.{js,jsx,json,css,ts,tsx,md,yaml}'"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pevers/images-scraper.git"
+  },
+  "keywords": [
+    "scraper",
+    "google",
+    "images"
+  ],
+  "author": "Peter Evers",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pevers/images-scraper/issues"
+  },
+  "homepage": "https://github.com/pevers/images-scraper#readme",
   "dependencies": {
-    "puppeteer": "^23.9.0"
+    "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^23.9.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "axios": "^1.7.8",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.1",
+    "prettier-check": "^2.0.0",
+    "pretty-quick": "^4.0.0",
+    "validator": "^13.12.0"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "overrides": [
+      {
+        "files": "*.css",
+        "options": {
+          "useTabs": false,
+          "tabWidth": 2
+        }
+      },
+      {
+        "files": "*.yaml",
+        "options": {
+          "useTabs": false,
+          "tabWidth": 2
+        }
+      }
+    ]
   }
 }
