--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Scrape Google Images
 
 on:
-  workflow_dispatch:  # <-- Ubah bagian ini
+  workflow_dispatch:  # Jalankan workflow secara manual
 
 jobs:
   scrape:
@@ -17,7 +17,7 @@ jobs:
         node-version: '18'
 
     - name: Install dependencies
-      run: npm install puppeteer
+      run: npm install
 
     - name: Run scraper
       run: node index.js
