--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
-"dependencies": {
+{
+  "name": "google-image-scraper",
+  "version": "1.0.0",
+  "description": "Scraper gambar Google Images dengan puppeteer",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
     "puppeteer": "^23.9.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "glob": "latest",
     "rimraf": "latest"
+  }
 }
