--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 1  '20' 
+        node-version: '20' 
 
     - name: Hapus node_modules dan package-lock.json
       run: |
