--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,18 @@
 name: Scrape Google Images
 
 on:
-  workflow_dispatch:  # Jalankan workflow secara manual
+  workflow_dispatch:
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20' 
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run scraper
-      run: node index.js
+      - uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      - name: Install dependencies
+        run: npm install
+      - name: Run 1  scraper
+        run: node index.js
