--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "google-image-scraper",
+  "name": "scrape-generate-post",
   "version": "1.0.0",
-  "description": "Scraper gambar Google Images",
+  "description": "Scrape images, generate articles with Gemini, and post to Blogger",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "nodemailer": "^6.9.1",
+    "@google/generative-ai": "^0.21.0",
     "google-img-scrap": "^1.1.4"
   }
 }
